# rl4mip

./: .gitignore  environment_rl4mip.yml  main_collect.py  main_dataGen.py  main_test.py  main_train.py  pyproject.toml  setup.py
PySCIPOpt-5.4.1/src/pyscipopt/: scip.pxd  scip.pxi
examples/: branch_selection_example.py  collect_strong_branching_data.py  test_trained_gcnn.py  train_gcnn_imitation.py
ml4co/DataCollector/: MIPdata.py
ml4co/DataCollector/Branch_data/: Colletor_utils.py  InstancesGenerator.py
ml4co/DataCollector/LNS_data/CL_data/: Collector_utils.py  InstanceGenerator.py  bipartite_graph.py  bipartite_graph_dataset.py  utils.py
ml4co/DataCollector/LNS_data/GBDT_data/: Data_Solution.py
ml4co/DataCollector/LNS_data/IL_data/: IMCollector.py  InstanceGenerator.py  bipartite_graph_dataset.py  bipartite_graph_loader.py
ml4co/DataCollector/LNS_data/RL_data/: DataMemory.py  Generator_utils.py  utilities.py
ml4co/DataCollector/Nodesel_data/: behaviour_generation.py
ml4co/DataGenerator/: MIPDataGen.py
ml4co/Test/Branch_test/: BranchTestEnv.py  test_utils.py
ml4co/Test/Nodesel_test/: node_test_env.py
ml4co/Trainer/Branch_model/symb_model/: expressions_graph.py  graph_agents.py  operators.py  operators_graph.py  rl_algos.py  transformer_utils.py
rl4mip/DataCollector/Branch_data/: FSBdataCollector.py  Generator_utils.py
rl4mip/DataCollector/Nodesel_data/: behaviour_utils.py  problem_generation.py  problem_utils.py
rl4mip/DataGenerator/: MIPDataGen.py
rl4mip/Test/: MIPtest.py
rl4mip/Test/Branch_test/: BranchTestEnv.py
rl4mip/Test/LNS_test/: GNNTest.py  LNSTtestEnv.py  test_utils.py
rl4mip/Test/Nodesel_test/: env_utils.py
rl4mip/Trainer/: MIPtrainer.py
rl4mip/Trainer/Branch_model/: GNN.py
rl4mip/envs/: branching_env.py
rl4mip/models/policies/: basic_policies.py  gcnn_policy.py
(+80 files in other folders)
